# distributed_systems

./: .gitignore
rabbitmq/: .classpath  .gitignore  .project  Z1_Consumer.java  Z1_Producer.java
ray/for-students/: docker-compose.yaml
ray/for-students/notebook/: lab-ray.ipynb
restful/: poll.py  pyproject.toml
restful_api_proxy/: .gitignore  README.md
restful_api_proxy/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  server.py
restful_api_proxy/backend/auth/: auth.py  manage_keys.py
restful_api_proxy/backend/config/: config.py  logging_config.py
restful_api_proxy/backend/data_models/: api_user.py  food_info.py  meal.py  ollama.py  recipe.py
restful_api_proxy/backend/db/: db.py
restful_api_proxy/backend/services/: find_substitute_service.py  food_info_service.py  meal_service.py  recipe_service.py
restful_api_proxy/deployment/: docker-compose.yaml
restful_api_proxy/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  astro.config.mjs  package-lock.json  package.json
restful_api_proxy/frontend/src/pages/: index.astro  results.astro
restful_api_proxy/frontend/src/styles/: global.css
servants_management/: .env.example  README.md
servants_management/client/: .gitignore  package.json  test.sh  tsconfig.json
servants_management/client/src/: cli.ts
servants_management/client/src/commands/: counter-get.ts  counter-inc.ts  evict.ts  get.ts  list.ts  set.ts
servants_management/client/src/lib/: ice.ts
servants_management/client/test/: counter_test.mjs
servants_management/server/: .gitignore  pyproject.toml
servants_management/server/src/app/: app.py
servants_management/server/src/servants/: counter_impl.py  intwrapper_impl.py
servants_management/server/src/server/: evictor.py  locator.py  server.conf  server.py
servants_management/slice/: servants.ice
sockets/gradle/wrapper/: gradle-wrapper.properties
sockets/src/main/java/: JavaUdpClient.java  JavaUdpServer.java
sockets/src/main/python/: PythonUdpClient.py
sockets_based_chat/: run_client.sh  run_server.sh  settings.gradle
sockets_based_chat/gradle/wrapper/: gradle-wrapper.properties
sockets_based_chat/src/main/java/app/: Main.java
sockets_based_chat/src/main/java/client/: Client.java  ClientInfo.java
sockets_based_chat/src/main/java/messages/: Message.java  MessageType.java  MessagesType.java
sockets_based_chat/src/main/java/server/: ClientHandler.java  Server.java  UDPChannelHandler.java
space_agency/: .gitignore  README.md  pyproject.toml
space_agency/deploy/: docker-compose.yaml
space_agency/src/space_agency/admin/: admin.py  app.py
space_agency/src/space_agency/agency/: agency.py  app.py
space_agency/src/space_agency/carrier/: app.py  carrier.py
space_agency/src/space_agency/shared/: callbacks.py  config.py  consumer.py  models.py  rabbitmq.py
space_agency/src/space_agency/utils/: utils.py
technical_newsletter/: README.md
technical_newsletter/client/: .gitignore  package-lock.json  package.json  tsconfig.cli.json
technical_newsletter/client/src/cli/: add-subscriptions.ts  args.ts  enums.ts  format.ts  proto.ts  remove-subscriptions.ts  subscribe.ts
technical_newsletter/docs/: CLI-usage.md
technical_newsletter/proto/: event.proto
technical_newsletter/server/: .gitignore  pyproject.toml
technical_newsletter/server/src/app/: app.py  generated_bindings.py  models.py  publisher.py  server.py  service.py
