[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["config*", "services*", "data_models*", "db*", "auth*"]
